@@ -28,6 +28,7 @@ TsparseMatrix-class     Class "TsparseMatrix" of Sparse Matrices in
 [<--methods             Methods for "[<-" - Assigning to Subsets for
                         'Matrix'
 band                    Extract bands of a matrix
+bdiag                   Construct a Block Diagonal Matrix
 compMatrix-class        Class "compMatrix" of Composite (Factorizable)
                         Matrices
 dCholCMatrix-class      Cholesky Decompositions of dsCMatrix Objects
@@ -77,7 +78,6 @@ lu                      Triangular Decomposition of a Square Matrix
 nMatrix-class           Class "nMatrix" of Non-zero Pattern Matrices
 ndenseMatrix-class      Virtual Class "ndenseMatrix" of Dense Logical
                         Matrices
-ndiMatrix-class         Class "ndiMatrix" of Diagonal Logical Matrices
 ngeMatrix-class         Class "ngeMatrix" of General Dense
                         Nonzero-pattern Matrices
 norm                    Norm of a Matrix
